<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/des_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="5dp"
        android:textSize="16sp"
        android:text="@string/des_sync"/>

    <TextView
        android:id="@+id/text_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_textview_details"
        android:textSize="16sp"
        android:textColor="#0000ff"
        android:padding="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <RadioButton
            android:id="@+id/update_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_update"
            android:textColor="#000"
            android:checked="true"
            android:textSize="16sp"
            android:buttonTint="#e75748"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/restore_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_restore"
            android:textColor="#000"
            android:textSize="16sp"
            android:buttonTint="#e75748"
            android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/btn_yes"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

</LinearLayout>