<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="10dp"
        android:text="@string/des_sync_handmade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/old_head_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:hint="@string/edt_start_number_hint"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/new_head_number"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/edt_replace_start_number_hint"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_action"
        android:text="@string/btn_handmade_sycn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>